--- a/haproxy.cfg.tmpl
+++ b/haproxy.cfg.tmpl
@@ -2,21 +2,22 @@ global
   log 127.0.0.1 local0 info
   stats socket /var/run/haproxy.stat user haproxy group haproxy mode 600 level admin
 
+{{ $service_port := printf "%s" (getenv "SERVICE_PORT") }}
+{{ $etcd_prefix := printf "%s" (getenv "ETCD_PREFIX") }}
+{{ $service_type := printf "%s" (getenv "SERVICE_TYPE") }}
+{{ $timeout_client_server := printf "%s" (getenv "TIMEOUT_CLIENT_SERVER") }}
+
 defaults
   log global
   option dontlognull
   option redispatch
   timeout queue 1m
   timeout connect 5s
-  timeout client 5m
-  timeout server 5m
+  timeout client {{ $timeout_client_server }}
+  timeout server {{ $timeout_client_server }}
   timeout check 5s
   retries 3
   maxconn 2000
-
-{{ $service_port := printf "%s" (getenv "SERVICE_PORT") }}
-{{ $etcd_prefix := printf "%s" (getenv "ETCD_PREFIX") }}
-{{ $service_type := printf "%s" (getenv "SERVICE_TYPE") }}
 
 frontend {{ $service_type }}
     bind *:{{ $service_port }}
